fix jump for unhover services__tabs-img

--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ body {
 
 .tagline-wrapper {
     display: inline-block;
-    margin: 0 auto;    
+    margin: 0 auto;
     position: absolute;
     top: 40%;
     left: 30%;
@@ -194,11 +194,17 @@ body {
     color: #fff;
 }
 
+.services__tabs-caption li span {
+      /*ICON HOVER OFF*/
+      transition: 1s;
+}
+
 .services__tabs-caption li:hover span {
     width: 100px;
     height: 100px;
+
+    /*ICON HOVER ON*/
     transition: 1s;
-    margin: 35px auto;
 }
 
 .services__tabs-caption .services__tabs-active {
@@ -404,7 +410,7 @@ body {
     height: 55px;
     text-align: center;
     text-decoration: none;
-    background: url("../img/blog/arrow-sprite.png"); 
+    background: url("../img/blog/arrow-sprite.png");
 }
 
 .jcarousel-prev {
@@ -413,7 +419,7 @@ body {
 
 .jcarousel-next {
     left: 0;
-    background-position: 0px 56px; 
+    background-position: 0px 56px;
 }
 
 .jcarousel__step-img {
